added live links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2 class="heading">Recent <span style="color: rgb(75, 168, 158);">Projects</span></h2>
                 <div class="project-grid">
                     <div class="project1">
-                        <img src="project 1.png" alt="Project 1">
+                        <a href="https://ananyaguptacodes.github.io/Portfolio/"><img src="project 1.png" alt="Project 1"></a>
                         <h2>Personal Portfolio</h2>
                         <p>A fully responsive personal portfolio to showcase my projects, skills, and resume. Built using HTML, CSS and basic JavaScript with a focus on modern layout, clean UI, and custom design.</p>
                     </div>
